--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   line_icons: ^2.0.3
   salomon_bottom_bar: ^3.3.2
   badges: ^3.1.2
+  flutter_rating_bar: ^4.0.1
+  blurrycontainer: ^2.1.0
 
 dev_dependencies:
   flutter_test:
