--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   badges: ^3.1.2
   flutter_rating_bar: ^4.0.1
   blurrycontainer: ^2.1.0
+  modal_bottom_sheet: ^3.0.0
 
 dev_dependencies:
   flutter_test:
