--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   blurrycontainer: ^2.1.0
   modal_bottom_sheet: ^3.0.0
+  logger: ^2.4.0
 
 dev_dependencies:
   flutter_test:
