--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   blurrycontainer: ^2.1.0
   modal_bottom_sheet: ^3.0.0
   logger: ^2.4.0
+  permission_handler: ^11.3.1
+  contacts_service: ^0.6.3
 
 dev_dependencies:
   flutter_test:
